# readium-lcp

./: Cargo.toml  LICENSE
lcp-types/: Cargo.toml
lcp-types/src/: crypto.rs  encryption_manifest.rs  lib.rs  link.rs  rights.rs  signature.rs  user.rs
lcp-types/src/crypto/: mod.rs  tripledes.rs
lcpget/: Cargo.toml
lcpget/src/: lib.rs  main.rs
