[package]
name = "lcp-types"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"]}
base64 = "0.13"
des = "0.7"
block-modes = "0.8"
aes = "0.7"
serde-xml-rs = "0.6"